@@ -22,7 +22,6 @@
 ;;     (emacs "26.1")
 ;;     (compat "30.0.0.0")
 ;;     (dash "2.19.1")
-;;     (git-commit "4.0.0")
 ;;     (magit-section "4.0.0")
 ;;     (seq "2.24")
 ;;     (transient "0.7.4")
